santosh - added ui bootstrap

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<button type="button" class="btn btn-success" name="button" ng-click="openModal()">Open Modal</button>
 	<div>
 		<h5>Line Chart</h5>
 		<div id = "linechart" style="height:400px"></div>
@@ -18,5 +19,4 @@
 		<h5>Column Chart</h5>
 		<div id = "columnchart" style="height:400px"></div>
 	</div>
-
 </div>
